# Edge_AI

./: README.md
Tools/: GPU_commands.txt  Installing Android Studio On Ubuntu 22.04_ Complete Guide - DEV Community.html  TensorFlow 2.15 update_ hot-fix for Linux installation issue — The TensorFlow Blog.html  git_commands.txt  linux_commands.txt  poetry_commands.txt  pyproject.toml  python_build_installation.txt  python_install.txt  ＂Please provide the path to the Android SDK＂ error solved.webm
Tools/Installing Android Studio On Ubuntu 22.04_ Complete Guide - DEV Community_files/: Search-932519b08d0700ee6909d1a1f9c20c48f412a33e551d518556d1b3.js  application-2ae904b128f47f9c4c81fc9ceea12914451930ac9487f4ee0.js  base-cae077fe832a6cc33a9c5d4076901d1d0b8be1c627041600158b97c9.js  https___dev-to-uploads.s3.amazonaws.com_uploads_articles_0c.avif  https___dev-to-uploads.s3.amazonaws.com_uploads_articles_vr.avif  js  signupModalShortcuts-0b25469b985100a01e94cbd7fccaf7f0a4d776e1.js
Tools/TensorFlow 2.15 update_ hot-fix for Linux installation issue — The TensorFlow Blog_files/: 338641159-widgets.js  css.css  js
Workspace/android_apps/object_detection/android/: build.gradle  local.properties
Workspace/tf_lite/: converted_model.tflite
Workspace/tf_lite/content/: model.tflite
Workspace/tf_lite/exp_saved_model/: fingerprint.pb  saved_model.pb
Workspace/tf_lite/test_saved_model/: fingerprint.pb  saved_model.pb
Workspace/tf_lite/tf_lite/: converted_model.tflite  tf_tiny_w1_ex1_tflite_conversion.py  tf_tiny_w1_ex2_transfer_learning.py
(+16 files in other folders)
