[tool.poetry]
description = "Environment for the development of ML projects"
authors = ["DLP"]
package-mode = false

[tool.poetry.dependencies]
python = "3.12.3"
tensorflow = {extras = ["and-cuda"], version = "^2.17.0"}
pandas = "^2.2.3"
tensorflow-hub = "^0.16.1"
tensorflow-datasets = "^4.9.6"
jupyterlab = "^4.2.5"
matplotlib = "^3.9.2"
pyqt5 = "^5.15.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
